--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "@upstash/redis": "^1.28.4"
   },
   "devDependencies": {
     "jest": "^29.7.0",
