--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "type": "commonjs",
   "dependencies": {
     "express": "^5.1.0",
-    "@upstash/redis": "^1.28.4"
+    "@upstash/redis": "^1.28.4",
+    "@vercel/kv": "^1.0.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
